# OptCuts

./: CMakeLists.txt  batch.py
cmake/: OptCutsDependencies.cmake  OptCutsDownloadExternal.cmake
display/: ExpInfo.js  displayResults.js
examples/: energyValPerIter.txt  option_optcuts.py  sample_optcuts.py
src/: Scaffold.cpp  main.cpp
src/Energy/: SigmaBoundEnergy.cpp  SigmaBoundEnergy.hpp  SigmaSmoothEnergy.cpp  SigmaSmoothEnergy.hpp  SymDirichletEnergy.cpp  SymDirichletEnergy.hpp
src/UnitTest/: Diagnostic.hpp
src/python/: optcuts_bindings.cpp  python_stubs.cpp
